# riscv-vp

./: README.md
sw/ams-control/: Makefile  main.c  plotSrcData.m
sw/basic-sobel/: Makefile  main.cpp
vp/: CMakeLists.txt
vp/cmake/Modules/: FindSystemCAMS.cmake
vp/dependencies/: build_systemc_ams_23.sh
vp/src/platform/: CMakeLists.txt
vp/src/platform/ams/: CMakeLists.txt  ams_main.cpp  ams_params.h  env.h  heater.h  model_debug.h  sensor.h  timescales.h
vp/src/platform/ams/ams-model/: adc_mapper.cpp  adc_mapper.h  heat_source.cpp  heat_source.h  heat_system.cpp  heat_system.h  sink.cpp  sink.h  testbench.cpp
vp/src/platform/basic-acc/: SobelFilter.h  filter_def.h  main.cpp
